[project]
name = "Nine2Shine"
version = "0.1.0"
description = "office time management app"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Hasnat Abdullah", email = "hasnat.abdullah@cefalo.com" }
]
dependencies = [
    "flet",
    "flet_lottie"
]

[tool.flet]
org = "com.cefalo"
product = "Nine2Shine"
company = "Cefalo"
copyright = "Copyright (C) 2025 by Hasnat"
assets = ["assets"]

[tool.flet.app]
path = "src"